fix windows cmodule

--- a/SUEWS-SourceCode/Makefile.ifort
+++ b/SUEWS-SourceCode/Makefile.ifort
@@ -23,7 +23,7 @@ suffix_code = .f90
 	-ln -sf $*.f95 $*.f90
 
 ifeq ($(OS),Windows_NT)
-			C_MODULE = strptime.o # this is needed by datetime_module: mingw lacks `strptime`
+			C_MODULE = $(SUEWS_DIR_SRC)strptime.o # this is needed by datetime_module: mingw lacks `strptime`
 			STATIC = -static -mcmodel=medium# mingw
 			STATICLIB =
 			SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Win10x64)
