--- a/SUEWS-SourceCode/Makefile.gfortran
+++ b/SUEWS-SourceCode/Makefile.gfortran
@@ -38,6 +38,7 @@ suffix_code = .f95
 
 # system specific settings
 ifeq ($(OS),Windows_NT)
+	CC = gcc
 	C_MODULE = $(SUEWS_DIR_SRC)strptime.o # this is needed by datetime_module: mingw lacks `strptime`
 	STATIC = -static -mcmodel=medium# mingw
 	STATICLIB =
