--- a/SUEWS-SourceCode/Makefile.gfortran
+++ b/SUEWS-SourceCode/Makefile.gfortran
@@ -1,6 +1,9 @@
 # Fortran compiler executable
 FC = gfortran
 
+# C compiler
+CC = gcc
+
 # Tell the compiler to accept C-preprocessor directives
 CPPFLAGS = -cpp
 
@@ -38,7 +41,6 @@ suffix_code = .f95
 
 # system specific settings
 ifeq ($(OS),Windows_NT)
-	CC = gcc
 	C_MODULE = $(SUEWS_DIR_SRC)strptime.o # this is needed by datetime_module: mingw lacks `strptime`
 	STATIC = -static -mcmodel=medium# mingw
 	STATICLIB =
