--- a/SUEWS-SourceCode/Makefile.ifort
+++ b/SUEWS-SourceCode/Makefile.ifort
@@ -1,5 +1,6 @@
 # compilers
 FC = ifort
+CC = icc
 CPPFLAGS =
 
 ifndef DEBUG
@@ -23,23 +24,23 @@ suffix_code = .f90
 	-ln -sf $*.f95 $*.f90
 
 ifeq ($(OS),Windows_NT)
-			C_MODULE = $(SUEWS_DIR_SRC)strptime.o # this is needed by datetime_module: mingw lacks `strptime`
-			STATIC = -static -mcmodel=medium# mingw
-			STATICLIB =
-			SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Win10x64)
+	C_MODULE = $(SUEWS_DIR_SRC)strptime.o # this is needed by datetime_module: mingw lacks `strptime`
+	STATIC = -static -mcmodel=medium# mingw
+	STATICLIB =
+	SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Win10x64)
 else
-			C_MODULE =
-			UNAME_S := $(shell uname -s)
-			ifeq ($(UNAME_S),Linux) # Linux
-				STATIC = -static
-				STATICLIB =
-				SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Linux)
-			endif
-			ifeq ($(UNAME_S),Darwin) # macOS
-				STATIC = -static-intel
-				STATICLIB = #libquadmath.a # force-ship this static lib
-				SUEWS_build_dir = $(addprefix $(SUEWS_build_base), macOS)
-			endif
+	C_MODULE =
+	UNAME_S := $(shell uname -s)
+	ifeq ($(UNAME_S),Linux) # Linux
+		STATIC = -static
+		STATICLIB =
+		SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Linux)
+	endif
+	ifeq ($(UNAME_S),Darwin) # macOS
+		STATIC = -static-intel
+		STATICLIB = #libquadmath.a # force-ship this static lib
+		SUEWS_build_dir = $(addprefix $(SUEWS_build_base), macOS)
+	endif
 endif
 
 
