add ubuntu binary

--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -18,41 +18,39 @@ on:
 
 jobs:
   test-suews:
-
     runs-on: macos-latest
 
     steps:
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+          token: ${{ secrets.PAT }}
 
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-        token: ${{ secrets.PAT }}
+      - name: Setup Python for use with actions
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.7" # Version range or exact version of a Python version to use, using semvers version range syntax.
+          architecture: "x64" # (x64 or x86)
 
-    - name: Setup Python for use with actions
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
-        architecture: 'x64' # (x64 or x86)
+      - name: fix gfortran on mac
+        run: |
+          echo $PATH
+          which gfortran-10
+          ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
+          which gfortran
+          gfortran --version
 
-    - name: fix gfortran on mac
-      run: |
-        echo $PATH
-        which gfortran-10
-        ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
-        which gfortran
-        gfortran --version
+      - name: build and test
+        run: |
+          make release
+          make test
 
-    - name: build and test
-      run: |
-        make release
-        make test
-
-    - name: Upload diff results from test
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: diff csv
-        path: Test/BaseRun/**/*diff.csv
+      - name: Upload diff results from test
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: diff csv
+          path: Test/BaseRun/**/*diff.csv
 
   binaries:
     needs: test-suews
@@ -60,7 +58,7 @@ jobs:
     strategy:
       matrix:
         py: ["3.9"]
-        os: [macOS-latest, windows-latest]
+        os: [macOS-latest, windows-latest, ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -87,8 +85,6 @@ jobs:
       - name: build binary
         run: |
           make release
-
-
 
   wheels-manylinux:
     needs: test-suews
@@ -169,7 +165,6 @@ jobs:
         with:
           name: python-package-distributions
           path: supy-driver/dist/
-
 
   deploy:
     name: Publish 🐍📦 to (Test)PyPI
