--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,8 @@ SUEWS-SourceCode/bin/*
 
 # test diff files
 *.diff.csv
+Test/BaseRun/2019a/Input/test_2004_data_60.txt
+Test/BaseRun/2019b/Input/test_2004_data_60.txt
+Test/BaseRun/2020a/Input/test_2004_data_60.txt
+Test/BaseRun/2020a/SUEWS_V2020a
+Test/BaseRun/2020b/Input/test_2004_data_60.txt
