Revert "Merge remote-tracking branch 'origin/master' into sunt05/issue41"
This reverts commit 35d651cd210242ab1492cd10b2a15f3f10852335, reversing
changes made to c460afaade98c78aba5dd909b7ee0a2bd5a6656b.

--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -55,7 +55,7 @@ jobs:
           path: Test/BaseRun/**/*diff.csv
 
   build-binaries:
-    needs: test-suews
+    # needs: test-suews
 
     strategy:
       matrix:
@@ -89,7 +89,7 @@ jobs:
           make release
 
   build-wheels-manylinux:
-    needs: test-suews
+    # needs: test-suews
 
     runs-on: ubuntu-latest
 
@@ -103,6 +103,7 @@ jobs:
           - cp39-cp39
           - cp38-cp38
           - cp37-cp37m
+          - cp36-cp36m
 
     steps:
       - uses: actions/checkout@v2
@@ -128,7 +129,7 @@ jobs:
           path: supy-driver/wheelhouse/
 
   build-wheels-mac_win:
-    needs: test-suews
+    # needs: test-suews
 
     strategy:
       matrix:
